[gd_scene load_steps=60 format=3 uid="uid://viwy0sauru8e"]

[ext_resource type="Script" uid="uid://di7kk4g38m55l" path="res://maps/ifElse/logic/level1.gd" id="1_jsf6u"]
[ext_resource type="Texture2D" uid="uid://dad7t7262xh2t" path="res://assets/Backgound/level1_scene.png" id="2_cngfb"]
[ext_resource type="Texture2D" uid="uid://5yk4bllahhph" path="res://assets/Button/maps/run.png" id="3_6lp7l"]
[ext_resource type="Texture2D" uid="uid://cqqa07t1lte16" path="res://assets/Button/maps/back_map.png" id="4_36wtt"]
[ext_resource type="Texture2D" uid="uid://c87v032h6thhx" path="res://assets/Button/maps/petunjuk_map.png" id="5_xy221"]
[ext_resource type="Texture2D" uid="uid://pytsm8qg7bkb" path="res://assets/Spritesheet/character.png" id="6_554he"]
[ext_resource type="Texture2D" uid="uid://1dglhky1k5vh" path="res://assets/Other/papan_next_level.png" id="7_xy221"]
[ext_resource type="Texture2D" uid="uid://luw6laahs8om" path="res://assets/Button/maps/lanjut.png" id="8_efa5x"]
[ext_resource type="Texture2D" uid="uid://d3gn5muckqffd" path="res://assets/Button/maps/ulang.png" id="9_554he"]
[ext_resource type="Texture2D" uid="uid://cus715op0qpwp" path="res://assets/Other/tips_ifElse.png" id="10_554he"]
[ext_resource type="Texture2D" uid="uid://cxs54teeyh70d" path="res://assets/Button/maps/goo.png" id="11_d0kcy"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_6lp7l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_36wtt"]
size = Vector2(17, 511)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6lp7l"]
size = Vector2(693, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xy221"]
size = Vector2(65, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2jh"]
atlas = ExtResource("6_554he")
region = Rect2(0, 896, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hce3"]
atlas = ExtResource("6_554he")
region = Rect2(64, 896, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k543t"]
atlas = ExtResource("6_554he")
region = Rect2(128, 896, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tfix"]
atlas = ExtResource("6_554he")
region = Rect2(192, 896, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t68yo"]
atlas = ExtResource("6_554he")
region = Rect2(256, 896, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_448op"]
atlas = ExtResource("6_554he")
region = Rect2(320, 896, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mvi8"]
atlas = ExtResource("6_554he")
region = Rect2(0, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_npiro"]
atlas = ExtResource("6_554he")
region = Rect2(64, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_klwta"]
atlas = ExtResource("6_554he")
region = Rect2(128, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqgdn"]
atlas = ExtResource("6_554he")
region = Rect2(192, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m80o8"]
atlas = ExtResource("6_554he")
region = Rect2(256, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_luhji"]
atlas = ExtResource("6_554he")
region = Rect2(320, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndfke"]
atlas = ExtResource("6_554he")
region = Rect2(384, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ot3ao"]
atlas = ExtResource("6_554he")
region = Rect2(448, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b4b7"]
atlas = ExtResource("6_554he")
region = Rect2(512, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsxwu"]
atlas = ExtResource("6_554he")
region = Rect2(0, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfv6t"]
atlas = ExtResource("6_554he")
region = Rect2(64, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1765p"]
atlas = ExtResource("6_554he")
region = Rect2(128, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv40i"]
atlas = ExtResource("6_554he")
region = Rect2(192, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yftr"]
atlas = ExtResource("6_554he")
region = Rect2(256, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mjat"]
atlas = ExtResource("6_554he")
region = Rect2(320, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtkd7"]
atlas = ExtResource("6_554he")
region = Rect2(384, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_edw4s"]
atlas = ExtResource("6_554he")
region = Rect2(448, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmuia"]
atlas = ExtResource("6_554he")
region = Rect2(512, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vqn6"]
atlas = ExtResource("6_554he")
region = Rect2(0, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uixi4"]
atlas = ExtResource("6_554he")
region = Rect2(64, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u357"]
atlas = ExtResource("6_554he")
region = Rect2(128, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_23p62"]
atlas = ExtResource("6_554he")
region = Rect2(192, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m383s"]
atlas = ExtResource("6_554he")
region = Rect2(256, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlwv1"]
atlas = ExtResource("6_554he")
region = Rect2(320, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic0uc"]
atlas = ExtResource("6_554he")
region = Rect2(384, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkugi"]
atlas = ExtResource("6_554he")
region = Rect2(448, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc4bi"]
atlas = ExtResource("6_554he")
region = Rect2(512, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpxf8"]
atlas = ExtResource("6_554he")
region = Rect2(0, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg8fy"]
atlas = ExtResource("6_554he")
region = Rect2(64, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwecs"]
atlas = ExtResource("6_554he")
region = Rect2(128, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksqwr"]
atlas = ExtResource("6_554he")
region = Rect2(192, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl841"]
atlas = ExtResource("6_554he")
region = Rect2(256, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3561"]
atlas = ExtResource("6_554he")
region = Rect2(320, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3exvu"]
atlas = ExtResource("6_554he")
region = Rect2(384, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq51s"]
atlas = ExtResource("6_554he")
region = Rect2(448, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6jp5"]
atlas = ExtResource("6_554he")
region = Rect2(512, 704, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_d0kcy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hce3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k543t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tfix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t68yo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_448op")
}],
"loop": true,
"name": &"diam",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mvi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npiro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klwta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqgdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m80o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luhji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndfke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ot3ao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4b4b7")
}],
"loop": true,
"name": &"jalan_atas",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsxwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfv6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1765p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv40i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yftr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mjat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtkd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edw4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmuia")
}],
"loop": false,
"name": &"jalan_bawah",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vqn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uixi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5u357")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23p62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m383s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlwv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic0uc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkugi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc4bi")
}],
"loop": true,
"name": &"jalan_kanan",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpxf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg8fy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwecs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksqwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl841")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3561")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3exvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq51s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6jp5")
}],
"loop": true,
"name": &"jalan_kiri",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oh141"]
radius = 6.0
height = 12.0

[node name="Level1" type="Node2D"]
script = ExtResource("1_jsf6u")

[node name="map" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(480, 265)
texture = ExtResource("2_cngfb")

[node name="StaticBody2D" type="StaticBody2D" parent="map"]
physics_material_override = SubResource("PhysicsMaterial_6lp7l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(220, -1.5)
shape = SubResource("RectangleShape2D_36wtt")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(-470, 1)
shape = SubResource("RectangleShape2D_36wtt")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(-120.5, -185)
shape = SubResource("RectangleShape2D_6lp7l")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(-120.5, 255)
shape = SubResource("RectangleShape2D_6lp7l")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(142, -6)
shape = SubResource("RectangleShape2D_36wtt")

[node name="run" type="Button" parent="map"]
offset_left = 242.0
offset_top = 132.0
offset_right = 450.0
offset_bottom = 180.0
pivot_offset = Vector2(104, 24)
focus_mode = 0
icon = ExtResource("3_6lp7l")
flat = true

[node name="back" type="Button" parent="map"]
offset_left = 290.0
offset_top = 195.0
offset_right = 398.0
offset_bottom = 223.0
pivot_offset = Vector2(54, 14)
focus_mode = 0
icon = ExtResource("4_36wtt")
flat = true

[node name="tips" type="Button" parent="map"]
offset_left = 290.0
offset_top = 225.0
offset_right = 398.0
offset_bottom = 253.0
pivot_offset = Vector2(54, 14)
focus_mode = 0
icon = ExtResource("5_xy221")
flat = true

[node name="TextEdit" type="TextEdit" parent="map"]
texture_filter = 1
offset_left = 236.0
offset_top = -245.0
offset_right = 458.0
offset_bottom = 109.0
pivot_offset = Vector2(111, 155)
theme_override_font_sizes/font_size = 12

[node name="FinishArea" type="Area2D" parent="map"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="map/FinishArea"]
position = Vector2(182, -140)
shape = SubResource("RectangleShape2D_xy221")

[node name="karakter" type="CharacterBody2D" parent="map"]
texture_filter = 1
position = Vector2(-707, 31)
scale = Vector2(1.5, 1.5)

[node name="karaktermap2" type="AnimatedSprite2D" parent="map/karakter"]
z_as_relative = false
texture_filter = 1
position = Vector2(578, 87.333305)
scale = Vector2(0.5388127, 0.72093016)
sprite_frames = SubResource("SpriteFrames_d0kcy")
animation = &"diam"
autoplay = "diam"
frame_progress = 0.9682522
speed_scale = 1.75
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="map/karakter"]
position = Vector2(595.3334, 127.33333)
shape = SubResource("CapsuleShape2D_oh141")

[node name="UI_Finish" type="CanvasLayer" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="UI_Finish"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.5
offset_top = -175.0
offset_right = 262.5
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_xy221")
metadata/_edit_use_anchors_ = true

[node name="TombolLanjut" type="Button" parent="UI_Finish/TextureRect"]
layout_mode = 0
offset_left = 275.0
offset_top = 275.0
offset_right = 458.0
offset_bottom = 318.0
pivot_offset = Vector2(91.5, 21.5)
focus_mode = 0
icon = ExtResource("8_efa5x")
flat = true

[node name="TombolUlangi" type="Button" parent="UI_Finish/TextureRect"]
layout_mode = 0
offset_left = 65.0
offset_top = 275.0
offset_right = 248.0
offset_bottom = 318.0
pivot_offset = Vector2(91.5, 21.5)
focus_mode = 0
icon = ExtResource("9_554he")
flat = true

[node name="UI_Tips" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="UI_Tips"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -175.0
offset_right = 300.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(300, 175)
texture = ExtResource("10_554he")
metadata/_edit_use_anchors_ = true

[node name="go" type="Button" parent="UI_Tips/TextureRect"]
texture_filter = 1
layout_mode = 0
offset_left = 435.5
offset_top = 290.5
offset_right = 568.5
offset_bottom = 323.5
pivot_offset = Vector2(66.5, 16.5)
focus_mode = 0
icon = ExtResource("11_d0kcy")
flat = true
